<resources>
    <string name="app_name">Customs.UA</string>
    <string name="action_settings">Settings</string>
    <string name="ForwardCalcTitle">Calculation based on vehicle</string>
    <string name="BackwardCalcTitle">Calculation based on target price</string>
    <string name="BackwardCalcHeader">Backward calculation</string>
    <string name="BackwardCalcInfo">Here you can calculate max sell price on the vehicle, based on target final price in Ukraine</string>
    <string name="BackwardCalcEditPrompt">Enter final price in Ukraine,(€):</string>
    <string name="BackwardCalcPreferencesTemplate">Engine range:\n%1$d-%2$d cm³, step %3$d cm³</string>
    <string name="erpTitle">Engine range preferences</string>
    <string name="erpMessage">This settings will be applied only for current vehicle type</string>
    <string name="erpApply">Apply</string>
    <string name="erpMin">Min engine</string>
    <string name="erpMax">Max engine</string>
    <string name="erpStep">Step</string>
    <string name="erpDefault">Default</string>
    <string name="erpWarningWrongValues">Please define correct values</string>
    <string name="erpWarningWrongRange">Please set max value greater than min value</string>
    <string name="erpWarningWrongStep">Please define engine step value</string>
    <string name="erpWarningEngineVolumeTooLarge">Engine volume too large, upper limit is 20000</string>
    <string name="erpWarningStepTooSmall">Step too small for defined volume range. Max count of items is 100</string>
    <string name="cancel">Cancel</string>
    <string name="Calculate">Calculate</string>
    <string name="Close">Close</string>
    <string name="SwitchMode">Switch mode</string>
    <string name="Preferences">Preferences</string>
    <string name="Info">Information</string>
    <string name="TableHeaderId"> # </string>
    <string name="TableHeaderCaption">Payments</string>
    <string name="Euro">€</string>
    <string name="engine">Engine</string>
    <string name="price">Price</string>
    <string name="volume_cm3">Volume, cm³</string>
    <string name="Payload">Payload</string>
    <string name="BasicPriceEuro">Price, €</string>
    <string name="errExciseListCorrupted">Excise list corrupted</string>
    <string name="errLayoutNotAssigned">Can not create view: layout is not assigned</string>
    <string name="errPriceCannotBeZero">Can not start calculation, price can not be 0</string>
    <string name="errUnknownVehicleType">Unknown vehicle type</string>
    <string name="errFinalPriceUndefined">Please define final price in Ukraine</string>
    <string name="errCanNotRunCalculation">Can not run calculation</string>
    <string name="assVehicleNotValid">Vehicle data not valid</string>
    <string name="assExciseNotValid">Excise data not valid</string>
    <string name="VehicleType">Type</string>
    <string name="Gasoline">Gasoline</string>
    <string name="Diesel">Diesel</string>
    <string name="Electric">Electric</string>
    <string name="Other">Other</string>
    <string name="IceEngine">compression-ignition internal combustion piston engine (diesel or semi-diesel), or with spark-ignition internal combustion piston engine</string>
    <string name="Car">Passenger cars</string>
    <string name="CarDescription">Motor cars and other motor vehicles principally designed for the transport of persons, including station wagons and racing cars</string>
    <string name="Caravan">Motorhome</string>
    <string name="SpecialPurposeLine1">This vehicle has a special design</string>
    <string name="SpecialPurposeLine2">(Motorhome / snowmobile / golf car / etc.)</string>
    <string name="SpecialPurposeSnowGolf">Snowmobile, Golf car or etc.</string>
    <string name="SpecialPurposeCaravan">Motorhome</string>
    <string name="SpecialPurposePrompt">Select vehicle purpose</string>
    <string name="CompensationImpost">Compensation impost</string>
    <string name="CompensationImpostDescription">Applied for passenger cars made in Russia (%1$.2f%% of (1) for this manufacturer)</string>
    <string name="MadeInRussiaPrompt">Please define manufacturer</string>
    <string name="MadeInRussia">Made in Russia</string>
    <string name="MadeInRussiaSollers">Sollers - Far East JSC</string>
    <string name="MadeInRussiaAutoVAZ">AutoVAZ JSC</string>
    <string name="MadeInRussiaOther">Other manufacturer</string>
    <string name="MadeInRussiaUndefined">No certificate of origin</string>
    <string name="MadeInRussiaCancel">Clear</string>
    <string name="Bus">Bus</string>
    <string name="BusDescription">Motor vehicles for the transport of ten or more persons, including the driver</string>
    <string name="Truck">Trucks</string>
    <string name="TruckDescription">Motor vehicles for the transport of goods</string>
    <string name="Dumper">Dumper intended for off-road usage</string>
    <string name="Motorcycle">Motorcycle</string>
    <string name="MotorcycleDescription">Motorcycles (including mopeds) and cycles fitted with an auxiliary motor, with or without side-cars</string>
    <string name="Clear">Clear</string>
    <string name="FcMotorcycleRegularEngineDescription">Motorcycles (including mopeds) and cycles fitted with an auxiliary motor. Code: 8711 10 ~ 8711 50</string>
    <string name="FcMotorcycleOtherEngineDescription">Code: 8711 90</string>
    <string name="FcBusDieselEngineDescription">With compression-ignition internal combustion piston engine (diesel or semi-diesel). Code: 8702 10</string>
    <string name="FcBusGasolineEngineDescription">With spark-ignition internal combustion piston engine. Code: 8702 90</string>
    <string name="FcCarGasolineEngineDescription">Motor cars and other motor vehicles principally designed for the transport of persons with spark-ignition internal combustion piston engine. Code: 8703 21 ~ 8703 24</string>
    <string name="FcCarDieselEngineDescription">Motor cars and other motor vehicles principally designed for the transport of persons with compression-ignition internal combustion piston engine (diesel or semi-diesel) Code: 8703 33</string>
    <string name="FcCarOtherEngineDescription">Other types, Code: 8703 90</string>
    <string name="FcSpecialDesignCaption">Special design</string>
    <string name="FcSpecialDesignDescription">Vehicles specially designed for travelling on snow; golf cars and similar vehicles. Code: 8703 10</string>
    <string name="FcCaravanCaption">Motor caravans</string>
    <string name="FcCaravanDescription">This group is a subgroup of regular car items</string>
    <string name="FcDumperIceDescription">Code: 8704 10 10</string>
    <string name="FcDumperOtherDescription">Code: 8704 10 90</string>
    <string name="FcTrack_8704_21_Description">Gross vehicle weight not exceeding 5 tonnes. Code: 8704 21</string>
    <string name="FcTrack_8704_22_Description">Gross vehicle weight exceeding 5 tonnes but not exceeding 20 tonnes. Code: 8704 22</string>
    <string name="FcTrack_8704_23_Description">Gross vehicle weight exceeding 20 tonnes. Code: 8704 23</string>
    <string name="FcTrack_8704_31_Description">Gross vehicle weight not exceeding 5 tonnes. Code: 8704 31</string>
    <string name="FcTrack_8704_32_Description">Gross vehicle weight exceeding 5 tonnes. Code: 8704 32</string>
    <string name="BasicPrice">Basic price</string>
    <string name="Impost">Impost</string>
    <string name="ImpostDescription">%1$d%% of (1)</string>
    <string name="Excise">Excise</string>
    <string name="ProtectionImpost">Additional import impost</string>
    <string name="ProtectionImpostDescription">5% of (1)</string>
    <string name="SpecialImpost">Special impost</string>
    <string name="SpecialImpostDescription" formatted="false">%1$.2f%% of (1)</string>
    <string name="ExciseDescription">ETC code: %1$s</string>
    <string name="VAT">VAT</string>
    <string name="VATDescription" formatted="false">20%% of (%1$s)</string>
    <string name="CustomDuties">Total custom duties</string>
    <string name="TotalPrice">Total price</string>
    <string name="Multiplier">Multiplier, percent</string>
    <string name="DefaultVolumeTruck">5000</string>
    <string name="DefaultVolumeCar">2000</string>
    <string name="DefaultVolumeMotorcycle">500</string>
    <string name="DefaultPrice">5000</string>
    <string name="GrossWeight">Gross weight</string>
    <string name="GwNotExceed5">up to 5 t</string>
    <string name="Gw5to20">5~20 t</string>
    <string name="GwExceed20">exceed 20 t</string>
    <string name="Code_8704_10_10_10_Caption">Dumpers designed for off-highway use</string>
    <string name="Code_8704_10_10_10">With compression-ignition internal combustion piston engine (diesel or semi-diesel), or with spark-ignition internal combustion piston engine, based on payload</string>
    <string name="Code_8704_10_90_10">same, not based on payload</string>
    <string name="Truck_GrossWeight_NotExceed5">Gross weight not exceed 5 tonnes</string>
    <string name="Truck_GrossWeight_Exceed5">Gross weight exceed 5 tonnes</string>
    <string name="Truck_GrossWeight_NotExceed20">Gross weight exceed 5 tonnes but not exceed 20 tonnes</string>
    <string name="Truck_GrossWeight_Exceed20">Gross weight exceed 20 tonnes</string>
    <string name="CaravanConflictsToSpecialDesign">Custom product list does not contain such combination, conflict removed</string>
    <string name="TruckEngineTypeConflict">This type of engine could be assigned for off-road use dumber only</string>
    <string name="Age">Age</string>
    <string name="AgeNew">New</string>
    <string name="AgeNotExceed5">&#8804; 5 years</string>
    <string name="Age5">= 5 years</string>
    <string name="AgeExceed5">&gt; 5 years</string>
    <string name="AgeNotExceed8">&#8804; 8 years</string>
    <string name="Age8">= 8 years</string>
    <string name="AgeExceed8">&gt; 8 years</string>
    <string name="title_activity_exception_handle">ExceptionHandleActivity</string>
    <string name="ApplicationError">Sorry, application error occurred</string>
    <string name="ApplicationErrorExplanation">A technical error appeared during application run. Try to restart application. \n\nWe would be very grateful for you if you let us know about this problem so we can fix it.</string>
    <string name="ApplicationErrorSendInfo">send bug report</string>
    <string name="CloseApplication">Close application</string>
    <string name="title_activity_send_exception">SendExceptionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="TextStubShort">Some short text</string>
    <string name="TextStubMedium">Some long text: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="TextStubLong">Some long text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id tortor in lorem dictum auctor quis a enim.</string>
    <string name="Act_3251_Caption">A preliminary calculation according to regulatory act 3251</string>
    <string name="Act_3251_Explanation">There is a law project №3251 exists, that implies a strong reduction of the used cars excises. In fact, the excise on user cars motor can be equated to the new cars excise. Currently (01/12/2015), this act is included in the next session of the UA Parlament. If this act will be accepted "as is", the cost of customs clearance of the vehicle would be:</string>
    <string name="Act_3251_Resume">Difference for the final price in UA will be %1$d€ (-%2$d%%)</string>
    <string name="Act_3251_Link">Overview table with all changes</string>
</resources>